--- a/posts/q1.md
+++ b/posts/q1.md
@@ -6,8 +6,59 @@ tag: 'advent of code'
 
 And so it begins! 
 
-Advent of Code 2022, Question 1 deals wih the following question:
+This section of the blog is dedicated to my thoughts and ramblings about Advent of Code 2022.
 
+—
+
+Advent of Code 2022: Question 1, Part 1
+
+Question 1 deals with finding the largest sum in a running group.
+
+The example input shows
+
+```sql
+1000
+2000
+3000
+
+4000
+
+5000
+6000
+
+7000
+8000
+9000
+
+10000
 ```
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+
+Where a space represents a delimiter between groups.
+
+In the above example, we can see that 
+
+`7000
+8000
+9000`
+
+Produces the highest sum, and that sum is *`24000`.*
+
+The question is to find the highest sum among the input given. 
+
+## Preparation
+
+Upon clicking into the input text, we can see that the input is exactly like the above sample input. This means that we can use Python’s `read()` function in its standard library, and the parsed text will automatically be converted to a list, super convenient!
+
+So the first thing I did was create a helper function:
+
+```py
+def parseFile(filename):
+  f = open(filename, 'r')
+
+  text = f.read().split("\n")
+
+  return text
 ```
+
+This takes a filename and looks in the same directory as the script for it. It opens the file and reads the entire thing. Next, it splits everything by new lines (denoted by \n), and stores it all in a List. The list is then returned.
+
